--- a/app/globals.css
+++ b/app/globals.css
@@ -8,8 +8,8 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-cormorant-garamond: var(--font-cormorant-garamond);
+  --font-rajdhani: var(--font-rajdhani);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -18,9 +18,15 @@
     --foreground: #ededed;
   }
 }
-
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.swiper-pagination-bullet-active span:first-of-type {
+  @apply bg-transparent rounded-none text-sm;
+}
+.swiper-pagination-bullet-active span:last-of-type {
+  @apply bg-white h-[1px] block w-5;
 }
