--- a/app/globals.css
+++ b/app/globals.css
@@ -1,23 +1,19 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #000000;
+  --foreground: #ededed;
+  --olive: #393a34;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-olive: var(--olive);
   --font-cormorant-garamond: var(--font-cormorant-garamond);
   --font-rajdhani: var(--font-rajdhani);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #000000;
-    --foreground: #ededed;
-  }
-}
 body {
   background: var(--background);
   color: var(--foreground);
