add instock drawer

--- a/app/globals.css
+++ b/app/globals.css
@@ -129,3 +129,8 @@
     @apply bg-background text-foreground;
   }
 }
+
+input:-webkit-autofill {
+    box-shadow: 0 0 0px 1000px #222 inset !important;
+    -webkit-text-fill-color: #eee !important;
+  }
